tee: add support for TEE client driver
Add support for TEE client driver.

TEE client driver uses the PSP communication
driver to communicate with secure entities
running on PSP.

The TEE client driver is responsible for enabling
communication between the rich world applications
running on Linux host with trusted applications
running on PSP.

TEE client driver provides userspace interface
through ioctl commands.

Change-Id: I0d5dc105673753fdcc356cc715a63cf8506bc19b
Signed-off-by: Maulik Mankad <maulik.mankad@amd.com>
Signed-off-by: Mohan Viswanathan <Mohan.Viswanathan@amd.com>
Signed-off-by: Srinidhi K Vijayendra <Srinidhi.Vijayendra@amd.com>

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -538,4 +538,5 @@ source "drivers/misc/genwqe/Kconfig"
 source "drivers/misc/echo/Kconfig"
 source "drivers/misc/cxl/Kconfig"
 source "drivers/misc/psp_comm/Kconfig"
+source "drivers/misc/tee/Kconfig"
 endmenu
