drm/amd/dal: dal enhancements for hdcp
Enhance DAL to support HDCP functionality.

DAL provides interface to read and write
display registers over I2C/AUX, trigger
HDCP authentication on hotplug & system
resume events and provide a sysfs interface
to report status of content protection.

Change-Id: I871627e84db73c451d1954e3dd316672ed27055d
Signed-off-by: Maulik Mankad <maulik.mankad@amd.com>
Signed-off-by: Mykola Lysenko <Mykola.Lysenko@amd.com>

--- a/drivers/gpu/drm/amd/dal/dc/Makefile
+++ b/drivers/gpu/drm/amd/dal/dc/Makefile
@@ -17,6 +17,10 @@ ifdef CONFIG_DRM_AMD_DAL_DCE8_0
 DC_LIBS += dce80
 endif
 
+ifdef CONFIG_DRM_AMD_HDCP_SERVICE
+DC_LIBS += hdcp
+endif
+
 AMD_DC = $(addsuffix /Makefile, $(addprefix $(FULL_AMD_DAL_PATH)/dc/,$(DC_LIBS)))
 
 include $(AMD_DC)
